# AA

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/app/: .env.example  index.html  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/app/src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: lib.rs  main.rs
apps/app/src/components/: AppShell.tsx  ui.tsx
apps/app/src/features/auth/: LoginPage.tsx  (+2 more)
apps/app/src/lib/: api.ts  speech.ts  supabase.ts  types.ts
docs/: SETUP.md
scripts/: android-build-apk.sh  android-e2e-login.sh  android-emulator-boot.sh  android-emulator-install.sh  android-env.sh  android-ndk-install.sh  android-sdk-install.sh  android-smoke.sh  check-devlogin.py  check-password-auth.py  check-register.py  e2e-ai-parse.py  e2e-realtime.py  gen-icon.mjs  ios-e2e.sh  ios-smoke.sh  seed-demo.mjs  shot-all.py  shot-design.py  shot-glass.py  shot-ios.py  shot-login.py  shots.py  verify-backend.mjs
supabase/: config.toml  seed.sql
supabase/functions/agent-query/: index.ts
supabase/functions/asr-transcribe/: index.ts
supabase/functions/parse-expense/: index.ts
supabase/migrations/: 0001_init.sql  0002_circles_members.sql  0003_expenses_splits.sql  0004_invitations_settlements.sql  0005_rls_policies.sql  0006_views_balances.sql  0007_realtime_grants.sql
(+9 files in other folders)
